cc validation, some of step #7. cannot get #5 for some reason.

--- a/form.html
+++ b/form.html
@@ -24,12 +24,12 @@
         </div>
       </div>
       <div class="input-field" id="start-date-field">
-        <label for="start-date">Date parking</label>
+        <label for="start-date">Start Date</label>
         <input id="start-date" type="date" required>
       </div>
       <div class="input-field" id="days-field">
         <label for="days">Number of days</label>
-        <input id="days" type="number" min="1" max="30" required>
+        <input id="days" type="number" min="1" max="31" required>
       </div>
       <div class="input-field" id="credit-card-field">
         <label for="credit-card">Credit Card</label>
